fixed mongoose CMakeLists.txt file in external directory

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,7 +1,8 @@
-add_library(mongoose "")
+add_library(mongoose)
 
 target_sources(mongoose
         PRIVATE ${CMAKE_CURRENT_LIST_DIR}/mongoose/mongoose.c
         PUBLIC ${CMAKE_CURRENT_LIST_DIR}/mongoose/mongoose.h
         )
-target_include_directories(mongoose PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+
+target_include_directories(mongoose PUBLIC ${CMAKE_CURRENT_LIST_DIR}/mongoose)
