--- a/src/router/CMakeLists.txt
+++ b/src/router/CMakeLists.txt
@@ -1,9 +1,3 @@
-add_library(router)
-
-target_sources(router
-        PRIVATE router.c
-        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/router.h
-        )
-
+add_library(router STATIC router.c)
 target_link_libraries(router PUBLIC mongoose)
-target_include_directories(router PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(router PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
