add model and api v2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(A_Simple_Api_C_Mongoose main.c)
 
+add_subdirectory(models)
 add_subdirectory(router)
 
 target_link_libraries(A_Simple_Api_C_Mongoose
