--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,33 @@
 cmake_minimum_required(VERSION 3.24)
-project(A_Simple_Api_C_Mongoose C)
+
+# Project settings ================================================================
+project("A Simple Api C Mongoose"
+        VERSION 1.0.0
+        LANGUAGES C
+        DESCRIPTION "A Simple Api service build with C and Mongoose framework"
+        HOMEPAGE_URL "https://github.com/Api-is-not-Boring/A-Simple-Api-C-Mongoose"
+        )
 
 set(CMAKE_C_STANDARD 23)
+set(CMAKE_C_EXTENSIONS OFF)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
+include(FindGit)
+if(GIT_FOUND)
+    message(STATUS "Git found: ${GIT_EXECUTABLE}")
+    execute_process(
+            COMMAND ${GIT_EXECUTABLE} log -1 --pretty=format:%h
+            OUTPUT_VARIABLE GIT_HASH
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+            ERROR_QUIET
+            WORKING_DIRECTORY
+            ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+else()
+    set(GIT_HASH "unknown")
+endif()
+
+message(STATUS "Git hash is ${GIT_HASH}")
 
 # Fetch Mongooses Repository ======================================================
 include(FetchContent)
@@ -20,3 +44,4 @@ target_include_directories(mongoose INTERFACE ${mongoose_SOURCE_DIR})
 
 # Add the Source directory ========================================================
 add_subdirectory(src)
+configure_file(project.h.in project.h @ONLY)
