--- a/.github/workflows/automated-api-tests.yml
+++ b/.github/workflows/automated-api-tests.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Install ninja-build tool
-      uses: seanmiddleditch/gha-setup-ninja@v3
-
+    - name: Get latest CMake and Ninja
+      uses: lukka/get-cmake@latest
+      
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
