--- a/project.h.in
+++ b/project.h.in
@@ -5,3 +5,4 @@
 #define PROJECT_URL         "@CMAKE_PROJECT_HOMEPAGE_URL@"
 #define API_VERSION         "@CMAKE_PROJECT_VERSION@"
 #define GIT_HASH            "@GIT_HASH@"
+#define SECRET              "@SECRET@"
