--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_executable(A_Simple_Api_C_Mongoose main.c)
 
 add_subdirectory(models)
+add_subdirectory(auth)
 add_subdirectory(router)
 
 target_link_libraries(A_Simple_Api_C_Mongoose
-        PRIVATE router
+        PRIVATE router auth
         )
