--- a/src/router/CMakeLists.txt
+++ b/src/router/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(router STATIC router.c)
 
-target_link_libraries(router PUBLIC mongoose model)
+target_link_libraries(router PUBLIC mongoose model auth)
 
 target_include_directories(router
-        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes ${CMAKE_BINARY_DIR}
+        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes
+        PRIVATE ${CMAKE_BINARY_DIR}
 )
