--- a/.github/workflows/automated-api-tests.yml
+++ b/.github/workflows/automated-api-tests.yml
@@ -29,7 +29,7 @@ jobs:
  
     - name: Install Postman CLI
       run: |
-        curl -o- "https://dl-cli.pstmn.io/install/osx_64.sh" | sh
+        curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
     - name: Login to Postman CLI
       run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
     - name: Run API tests
