--- a/src/models/CMakeLists.txt
+++ b/src/models/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(models STATIC model.c)
 
-target_link_libraries(models PUBLIC ${SQLite3_LIBRARIES})
+target_link_libraries(models PRIVATE mongoose ${SQLite3_LIBRARIES} auth)
 
 target_include_directories(models
-        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes ${MONGOOSE_INCLUDE_DIR}
+        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes
         )
