--- a/src/auth/CMakeLists.txt
+++ b/src/auth/CMakeLists.txt
@@ -12,11 +12,29 @@ FetchContent_Declare(
 # Clone Repository ================================================================
 FetchContent_MakeAvailable(l8w8jwt)
 
+# Fetch Crypt Blowfish Repository ==================================================
+include(FetchContent)
+FetchContent_Declare(
+        crypt_blowfish
+        GIT_REPOSITORY https://github.com/openwall/crypt_blowfish.git
+        GIT_TAG Owl-3_1-release
+)
+
+# Clone Repository ================================================================
+FetchContent_MakeAvailable(crypt_blowfish)
+add_library(crypt_blowfish INTERFACE)
+target_sources(crypt_blowfish INTERFACE
+        ${crypt_blowfish_SOURCE_DIR}/crypt_blowfish.c
+        ${crypt_blowfish_SOURCE_DIR}/crypt_gensalt.c
+        ${crypt_blowfish_SOURCE_DIR}/wrapper.c
+        )
+target_include_directories(crypt_blowfish INTERFACE ${crypt_blowfish_SOURCE_DIR})
+
 target_link_libraries(auth
-        PRIVATE l8w8jwt ${SQLite3_LIBRARIES}
+        PRIVATE l8w8jwt ${SQLite3_LIBRARIES} mongoose crypt_blowfish
         )
 
 target_include_directories(auth
-        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes ${MONGOOSE_INCLUDE_DIR}
+        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes
         PRIVATE ${CMAKE_BINARY_DIR}
         )
