--- a/src/router/CMakeLists.txt
+++ b/src/router/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(router STATIC router.c)
 
-target_link_libraries(router PRIVATE models auth)
+target_link_libraries(router PRIVATE mongoose models auth)
 
 target_include_directories(router
-        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes ${MONGOOSE_INCLUDE_DIR}
+        PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes
         PRIVATE ${CMAKE_BINARY_DIR}
 )
