--- a/.github/workflows/automated-api-tests.yml
+++ b/.github/workflows/automated-api-tests.yml
@@ -8,8 +8,11 @@ env:
   BUILD_TYPE: Debug
 
 jobs:
-  Api-Test-Linux:
-    runs-on: ubuntu-latest
+  Api-Test:
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "macos-latest" ]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
@@ -26,38 +29,17 @@ jobs:
     - name: Run Api
       run: ${{github.workspace}}/build/src/A_Simple_Api_C_Mongoose &
 
-    - name: Install Postman CLI
+    - if: matrix.os == 'ubuntu-latest'
+      name: Install Postman CLI Linux
       run: |
         curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+    - if: matrix.os == 'macOS-latest'
+      name: Install Postman CLI MacOS
+      run: |
+        curl -o- "https://dl-cli.pstmn.io/install/osx_64.sh" | sh
+
     - name: Login to Postman CLI
       run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
     - name: Run API tests
       run: |
         postman collection run "7779863-874f5270-9a2e-448e-a963-87f8b9b0cbbd" -e "7779863-a2096246-922a-440d-9863-d540e8ff461d"
-
-  Api-Test-MacOS:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Get latest CMake and Ninja
-        uses: lukka/get-cmake@latest
-
-      - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G Ninja -S ${{github.workspace}}
-
-      - name: Build
-        run: cmake --build ${{github.workspace}}/build --target A_Simple_Api_C_Mongoose
-
-      - name: Run Api
-        run: ${{github.workspace}}/build/src/A_Simple_Api_C_Mongoose &
-
-      - name: Install Postman CLI
-        run: |
-          curl -o- "https://dl-cli.pstmn.io/install/osx_64.sh" | sh
-      - name: Login to Postman CLI
-        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
-      - name: Run API tests
-        run: |
-          postman collection run "7779863-874f5270-9a2e-448e-a963-87f8b9b0cbbd" -e "7779863-a2096246-922a-440d-9863-d540e8ff461d"
