--- a/.github/workflows/automated-api-tests.yml
+++ b/.github/workflows/automated-api-tests.yml
@@ -20,6 +20,13 @@ jobs:
     - name: Get latest CMake and Ninja
       uses: lukka/get-cmake@latest
 
+    - name: Load cached venv
+      id: cached-cmake-configure
+      uses: actions/cache@v3.2.2
+      with:
+        path: build
+        key: venv-${{ runner.os }}-${{ steps.get-cmake.outputs.cmake-version }}
+
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G Ninja -S ${{github.workspace}}
 
